# ChangeLog for dev-db/postgresql-base
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.66 2010/07/14 18:40:22 patrick Exp $

*postgresql-base-9.0_beta3 (14 Jul 2010)

  14 Jul 2010; Patrick Lauer <patrick@gentoo.org>
  +postgresql-base-9.0_beta3.ebuild, +files/postgresql-9.0-base.3.patch,
  +files/postgresql-9.0-common.3.patch:
  Bump

  13 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  postgresql-base-8.4.4-r2.ebuild:
  stable x86, security bug 320967

  13 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  postgresql-base-8.3.11-r1.ebuild:
  stable x86, security bug 320967

  13 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  postgresql-base-8.2.17-r1.ebuild:
  stable x86, security bug 320967

  13 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  postgresql-base-8.1.21-r1.ebuild:
  stable x86, security bug 320967

  10 Jul 2010; Raúl Porcel <armin76@gentoo.org>
  postgresql-base-7.4.29-r1.ebuild, postgresql-base-8.0.25-r1.ebuild,
  postgresql-base-8.1.21-r1.ebuild, postgresql-base-8.2.17-r1.ebuild,
  postgresql-base-8.3.11-r1.ebuild, postgresql-base-8.4.4-r2.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #320967

  23 Jun 2010; Christoph Mende <angelos@gentoo.org>
  postgresql-base-7.4.29-r1.ebuild, postgresql-base-8.0.25-r1.ebuild,
  postgresql-base-8.1.21-r1.ebuild, postgresql-base-8.2.17-r1.ebuild,
  postgresql-base-8.3.11-r1.ebuild, postgresql-base-8.4.4-r2.ebuild:
  Stable on amd64 wrt bug #320967

  21 Jun 2010; Jeroen Roovers <jer@gentoo.org>
  postgresql-base-7.4.29-r1.ebuild, postgresql-base-8.0.25-r1.ebuild,
  postgresql-base-8.1.21-r1.ebuild, postgresql-base-8.2.17-r1.ebuild,
  postgresql-base-8.3.11-r1.ebuild, postgresql-base-8.4.4-r2.ebuild:
  Stable for HPPA (bug #320967).

  20 Jun 2010; Patrick Lauer <patrick@gentoo.org>
  postgresql-base-9.0_beta2-r1.ebuild:
  Adapting elog messages for unmasking
