@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/Attic/postgresql-docs-9.0_beta2.ebuild,v 1.1 2010/06/09 18:27:56 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/Attic/postgresql-docs-9.0_beta4.ebuild,v 1.1 2010/08/09 19:27:15 patrick Exp $
 
 EAPI=2
 
@@ -31,7 +31,7 @@ DEPEND="app-text/openjade
 	app-text/sgmltools-lite"
 
 src_prepare() {
-	epatch "${FILESDIR}/postgresql-${SLOT}-common.patch"
+	epatch "${FILESDIR}/postgresql-${SLOT}-common.3.patch"
 	eautoconf || die "Failed to eautoconf"
 }
 
