@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/postgresql-server
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.75 2010/07/14 18:41:30 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.76 2010/08/09 19:27:57 patrick Exp $
+
+*postgresql-server-9.0_beta4 (09 Aug 2010)
+
+  09 Aug 2010; Patrick Lauer <patrick@gentoo.org>
+  -postgresql-server-9.0_beta2.ebuild, +postgresql-server-9.0_beta4.ebuild:
+  Bump
 
 *postgresql-server-9.0_beta3 (14 Jul 2010)
 
