@@ -1,6 +1,13 @@
 # ChangeLog for dev-db/postgresql-base
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.66 2010/07/14 18:40:22 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.67 2010/08/09 19:26:47 patrick Exp $
+
+*postgresql-base-9.0_beta4 (09 Aug 2010)
+
+  09 Aug 2010; Patrick Lauer <patrick@gentoo.org>
+  -postgresql-base-9.0_beta2.ebuild, -postgresql-base-9.0_beta2-r1.ebuild,
+  +postgresql-base-9.0_beta4.ebuild:
+  Bump
 
 *postgresql-base-9.0_beta3 (14 Jul 2010)
 
